src/styles/globals/form/_input-description.css
.input-description {
    --input-description-order: 10;
    --input-description-margin: var(--spacing-s) 0 0;
    --input-description-padding: 0 var(--spacing-xs);
    --input-description-color: var(--color-font-light);
    --input-description-font-family: var(--font-family-text);
    --input-description-font-size: var(--font-size-s);
    --input-description-font-weight: var(--font-weight-text-normal);
    --input-description-column: 1 / -1;
    --input-description-pointer-events: none;

    order: var(--input-description-order);
    margin: var(--input-description-margin);
    padding: var(--input-description-padding);
    color: var(--input-description-color);
    font-family: var(--input-description-font-family);
    font-size: var(--input-description-font-size);
    font-weight: var(--input-description-font-weight);
    grid-column: var(--input-description-column);
    pointer-events: var(--input-description-pointer-events);
}

.input-description--after-group {
    /*--input-description-padding: 0 var(--spacing-s) 0 calc(var(--spacing-m) + 2px);*/
    --input-description-padding: 0 var(--spacing-s) 0 var(--spacing-xs)
}

.input-description--checkbox-group {
    --input-description-padding: 0;

    grid-column: var(--checkbox-group-description-column);
}

.input-description--toggle-group {
    --input-description-padding: 0;

    grid-column: var(--toggle-group-description-column);
}

